{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 12,
  "lineage": "a937e28f-e30c-be0c-b5b8-56e14dbd1057",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725374347:internet-gateway/igw-07bffb74ae967f520",
            "id": "igw-07bffb74ae967f520",
            "owner_id": "851725374347",
            "tags": {
              "Name": "ExampleInternetGateway"
            },
            "tags_all": {
              "Name": "ExampleInternetGateway"
            },
            "vpc_id": "vpc-05274c95a00e46aa7"
          },
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725374347:route-table/rtb-07165b5fea97d7033",
            "id": "rtb-07165b5fea97d7033",
            "owner_id": "851725374347",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07bffb74ae967f520",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ExampleRouteTable"
            },
            "tags_all": {
              "Name": "ExampleRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-05274c95a00e46aa7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.example",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0885a52ee81fb61c4",
            "route_table_id": "rtb-07165b5fea97d7033",
            "subnet_id": "subnet-0c610dccfc93d0ed4"
          },
          "dependencies": [
            "aws_internet_gateway.example",
            "aws_route_table.example",
            "aws_subnet.example",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725374347:security-group/sg-06b15e57fc3d6a3e7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06b15e57fc3d6a3e7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240715152616031600000001",
            "name_prefix": "terraform-",
            "owner_id": "851725374347",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ExampleSecurityGroup"
            },
            "tags_all": {
              "Name": "ExampleSecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-05274c95a00e46aa7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725374347:subnet/subnet-0c610dccfc93d0ed4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c610dccfc93d0ed4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725374347",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ExampleSubnet"
            },
            "tags_all": {
              "Name": "ExampleSubnet"
            },
            "vpc_id": "vpc-05274c95a00e46aa7"
          },
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725374347:vpc/vpc-05274c95a00e46aa7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04402e68c853e780c",
            "default_route_table_id": "rtb-02e46703ed88e0109",
            "default_security_group_id": "sg-030ffd11c52cd0d13",
            "dhcp_options_id": "dopt-09a4d7058e8533f1f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05274c95a00e46aa7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02e46703ed88e0109",
            "owner_id": "851725374347",
            "tags": {
              "Name": "ExampleVPC"
            },
            "tags_all": {
              "Name": "ExampleVPC"
            }
          }
        }
      ]
    }
  ]
}